<resources>
    <string name="app_name">Tinder</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="facebook_app_id">760271745300003</string>
    <string name="fb_login_protocol_scheme">fb760271745300003</string>
    <string name="facebook_client_token">d56d36f71387d6594b2714f700032ff2</string>
    <string name="hint_email">이메일주소</string>
    <string name="hint_password">비밀번호</string>
    <string name="login_with">Sign-in with</string>
    <string name="input_user_name">사용하실 닉네임을 입력해주세요!</string>
    <string name="save">저장</string>
    <string name="check_match">매칭확인</string>
    <string name="sign_out">로그아웃</string>
    <string name="match_user_list">매칭된 유저 목록</string>
    <string name="swipe">양쪽으로 스와이프!</string>
    <string name="like">좋아요</string>
    <string name="dislike">싫어요</string>
</resources>